# CMakeList.txt : CMake project for Homework2_DataStruct, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (Homework2_DataStruct "Homework2_DataStruct.cpp"  "Wheel.h" "wheel.cpp" "player.cpp")

# TODO: Add tests and install targets if needed.
